created dummy api again

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "back-to-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+  
+  "start": "node index.js"
+
   },
   "author": "",
   "license": "ISC",
